# mv-onboarding-python-data-structures-II

./: README.md  pyproject.toml
.github/workflows/: check.yml
src/: linked_list.py
tests/: test_linkedlist.py
